--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,24 @@
     width: 300px;
     height: 350px;
 }
+#nomkiosko{
+    
+    width: 300px;
+    margin: 20px auto;
+    background-color: greenyellow ;
+    border: 2px solid grey;
+    position: relative;
+}
+
+h3{
+    width: 300px;
+    background-color: greenyellow ;
+    border: 2px solid grey;
+    position: relative;
+}
+
+#horarios{
+    border: black 1px solid;
+    position: relative;
+    top: -20px;
+}
