--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,23 @@
     border: 2px solid grey;
     position: relative;
     color: white;
-
-
-
-
-
+    animation-duration: 10s;
+    animation-name: titulo;
 }
+    @keyframes titulo {
+        from {
+            
+            width: 100%;
+        }
+        to {
+            font-size: 10 px;
+        }
+    }
+
+
+
+
+
 
 h3{
     width: 300px;
@@ -78,4 +89,11 @@ body {
 #botones{
     top: -20px;
     position: center;
+}
+h6 {
+    text-align: center;
+    margin: auto;
+
+
+
 }
