--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,13 @@
             font-size: 10 px;
         }
     }
-
+#mapas{
+        width: 1024;
+        height: 350px;
+        display: block;
+        margin: auto;
+        border: 2px solid grey;
+}
 
 h3{
     width: 300px;
