--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,18 @@
     margin: auto;
     border: 2px solid grey;
 }
+#kiosko_imagen3{
+
+height: 100px;
+width: 10px; 
+
+
+}
+
+
+
+
+
 #logo-kiosko{
     width: 150;
     height: 100px;
