--- a/css/style.css
+++ b/css/style.css
@@ -116,3 +116,18 @@ h6 {
     background-repeat:no-repeat;
     background-position: center center;
 }
+
+.parent {
+    display: grid;
+    grid-template-columns: 1fr repeat(4, 0);
+    grid-template-rows: 0.3fr repeat(4, 0.5fr) 0.2fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    }
+    
+    .div1 { grid-area: 1 / 1 / 2 / 2; }
+    .div2 { grid-area: 2 / 1 / 3 / 2; }
+    .div3 { grid-area: 3 / 1 / 4 / 2; }
+    .div4 { grid-area: 4 / 1 / 5 / 2; }
+    .div5 { grid-area: 5 / 1 / 6 / 2; }
+    .div6 { grid-area: 6 / 1 / 7 / 2; }
