--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,11 @@ body{
 }
 
 
-#logo-kiosko{
-    width: 150;
-    height: 100px;
-    display: block;
-    margin: auto;
-    border: 2px solid grey; 
+.logoKiosko{
+    width: 150px;
+    height: 150px;
+    display: flex;
+    margin-left: 600px; 
 }
 #nomkiosko{ 
     width: 300px;
@@ -116,118 +115,3 @@ h6 {
 p{
     font-family: Robot;
 }
-/*codigo de barra*/
-#menu {
-	background: #0099CC;
-	background: linear-gradient(to bottom,  #FF802B,  #EDD221);
-	color: #FFF;
-	height: 45px;
-	padding-left: 18px;
-	border-radius: 25px;
-	border: 4px double #606591;
-    position:fixed;
-    width: 99%;
-    align-content: center;
-}
-#menu ul, #menu li {
-	margin: 0 auto;
-	padding: 0;
-	list-style: none
-}
-#menu ul {
-	width: 100%;
-}
-#menu li {
-	float: left;
-	display: inline;
-	position: relative;
-}
-#menu a {
-	display: block;
-	line-height: 37px;
-	padding: 0 14px;
-	text-decoration: none;
-	color: #FFFFFF;
-	font-size: 16px;
-}
-#menu a.dropdown-arrow:after {
-	content: "\25BE";
-	margin-left: 5px;
-}
-#menu li a:hover {
-	color: #0099CC;
-	background: #F2F2F2;
-}
-#menu input {
-	display: none;
-	margin: 0;
-	padding: 0;
-	height: 45px;
-	width: 100%;
-	opacity: 0;
-	cursor: pointer
-}
-#menu label {
-	display: none;
-	line-height: 37px;
-	text-align: center;
-	position: absolute;
-	left: 35px
-}
-#menu label:before {
-	font-size: 1.6em;
-	content: "\2261"; 
-	margin-left: 20px;
-}
-#menu ul.sub-menus{
-	height: auto;
-	overflow: hidden;
-	width: 170px;
-	background: #444444;
-	position: absolute;
-	z-index: 99;
-	display: none;
-}
-#menu ul.sub-menus li {
-	display: block;
-	width: 100%;
-}
-#menu ul.sub-menus a {
-	color: #FFFFFF;
-	font-size: 16px;
-}
-#menu li:hover ul.sub-menus {
-	display: block
-}
-#menu ul.sub-menus a:hover{
-	background: #F2F2F2;
-	color: #444444;
-}
-@media screen and (max-width: 800px){
-	#menu {position:fixed}
-	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
-	#menu ul.sub-menus {width:100%;position:static;}
-	#menu ul.sub-menus a {padding-left:30px;}
-	#menu li {display:block;float:none;width:auto;}
-	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
-	#menu input {z-index:4}
-	#menu input:checked + label {color:white}
-	#menu input:checked + label:before {content:"\00d7"}
-	#menu input:checked ~ ul {display:block}
-}
-/*Mapeo de la pagina*/
-.total {
-    display: grid;
-    grid-template-columns: 1fr repeat(4, 0);
-    grid-template-rows: 0.3fr repeat(4, 0.5fr) 0.2fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-    }
-    
-    .Header { grid-area: 1 / 1 / 2 / 2; }
-    .menu_flotante { grid-area: 2 / 1 / 8 / 2; }
-    .direccion { grid-area: 3 / 1 / 4 / 2; }
-    .horarios { grid-area: 4 / 1 / 5 / 2; }
-    .productos { grid-area: 5 / 1 / 6 / 2; }
-    .ofertas { grid-area: 6 / 1 / 7 / 2; }
-    .pie_pag { grid-area: 7 / 1 / 8 / 2; }
