--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,7 @@
-#kioskodefrente {
-    width: 300px;
-    height: 350px;
-    display: block;
-    margin: auto;
-    border: 2px solid grey;
-}
-#kioskodefrente2 {
-    width: 1024;
-    height: 350px;
-    display: block;
-    margin: auto;
-    border: 2px solid grey;
-    
-}
-#kioskodefrente3{
-    width: 1024;
-    height: 350px;
-    display: block;
-    margin: auto;
-    border: 2px solid grey;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
 
